tests/NormalTests/paczka1/small_fuzzy/80835379.err
Error in line 5: VTgT8GiY1x S208 87,4
Error in line 10: JDoYCwr A551 26,2
